Fix "Out" layout for pydata-sphinx-theme
Follow up to #484, which got misaligned again, likely through pydata-sphinx-theme.

Note: This is a purely empirical suggestion based on the matplotlib docs, e.g.:
https://matplotlib.org/devdocs/tutorials/colors/colormap-manipulation.html

I don't know how to find out whether this is generally ok.

--- a/sphinx_gallery/_static/sg_gallery.css
+++ b/sphinx_gallery/_static/sg_gallery.css
@@ -82,7 +82,7 @@ p.sphx-glr-script-out {
 .sphx-glr-script-out .highlight {
   background-color: transparent;
   margin-left: 2.5em;
-  margin-top: -2.1em;
+  margin-top: -2.9em;
 }
 .sphx-glr-script-out .highlight pre {
   background-color: #fafae2;
